# legislator-search-hackathon

./: .gitignore  README.md  justfile
congress-events/: Cargo.toml  justfile
congress-events/src/: congress_api.rs  govinfo.rs  lib.rs  main.rs  models.rs  output.rs  transcript_parser.rs
congress-hearings/: SPEC.md  cleanup_hearings.py  congressional_hearings_2020_2026.yaml  enrich_hearings.py  fetch_congressional_hearings.py  hearings_checkpoint.json  sample_hearings.yaml
congress-records/: README.md  SPEC.md  congressional_records_2020_2026.yaml  fetch_congressional_records.py
congress-votes/: README.md  SPEC.md  congressional_votes_2020_2026.yaml  fetch_votes.py
data/: floor_speeches_2024.yaml  master_congressional_events.yaml
docs/: DEMO.md  LEGISLATORS.md  ROADMAP.md  architecture.md
docs/adr/: 001-hearing-text-storage.md
docs/specs/: transcription-pipeline-spec.md  transnational-repression-media-spec.md
legislators-chat/: CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json
legislators-chat/docs/: API_INTEG_ROADMAP.md  API_SPEC.md  ARCHITECTURE.md  PROMPT_ENGINEERING.md  PROMPT_ROADMAP.md  ROADMAP.md  STYLES.md
legislators-chat/src/app/: globals.css  layout.tsx  page.tsx
legislators-chat/src/hooks/: index.ts  use-auto-save.ts  use-before-unload.ts  use-chat-extraction.tsx  use-chat.tsx  use-contact-content.tsx  use-contact.tsx  use-edit-history.ts  use-filters.tsx  use-network-status.tsx  use-panel-preferences.tsx  use-results.tsx  use-search-orchestration.tsx  use-sentiment.tsx  use-session-sync.tsx
legislators-chat/src/lib/: ai-client.ts  api.ts  conversation-storage.ts  legislator-lookup.ts  mock-data.ts  (+10 more)
legislators-search/: README.md  package.json  pnpm-lock.yaml
legislators-search/docs/: ARCHITECTURE.md  ROADMAP.md  STYLES.md
media-common/: Cargo.toml
media-common/src/: client.rs  lib.rs  members.rs  types.rs
media-cspan/: Cargo.toml
media-cspan/src/: api.rs  main.rs
media-podcasts/: Cargo.toml
media-podcasts/src/: api.rs  main.rs
media-tv-archive/: Cargo.toml
media-tv-archive/src/: api.rs  main.rs
media-youtube/: Cargo.toml
media-youtube/src/: api.rs  main.rs
politics-search/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  justfile
politics-search/.claude/: settings.local.json
politics-search/config/: ingestion.yaml  podcasts.yaml
politics-search/crates/polsearch-api/: Cargo.toml
politics-search/crates/polsearch-api/src/: error.rs  main.rs
politics-search/crates/polsearch-api/src/middleware/: auth.rs  mod.rs
politics-search/crates/polsearch-api/src/models/: request.rs  response.rs
politics-search/crates/polsearch-api/src/routes/: content.rs  health.rs  mod.rs  search.rs
politics-search/crates/polsearch-archive/: Cargo.toml
politics-search/crates/polsearch-archive/src/: error.rs  lib.rs  store.rs
politics-search/crates/polsearch-cli/: Cargo.toml  build.rs
politics-search/crates/polsearch-cli/src/: cli.rs  commands.rs  main.rs
politics-search/crates/polsearch-cli/src/commands/: backfill_batches.rs  backfill_duration.rs  backfill_speakers.rs  committees.rs  db.rs  embed_votes.rs  fetch_episodes.rs  fetch_floor_speeches.rs  fts.rs  index.rs  ingest_all.rs  ingest_floor_speeches.rs  ingest_hearings.rs  ingest_votes.rs  list_podcasts.rs  merge_speakers.rs  missing_hearings.rs  search.rs  seed.rs  speakers.rs  stats.rs  status.rs  transcribe_plan.rs  util.rs  verify.rs
politics-search/crates/polsearch-core/: Cargo.toml
politics-search/crates/polsearch-core/src/: error.rs  lib.rs  models.rs
politics-search/crates/polsearch-core/src/models/: amendment.rs  bill.rs  committee.rs  content.rs  content_speaker.rs  content_type.rs  content_variant.rs  floor_speech.rs  floor_speech_segment.rs  floor_speech_statement.rs  hearing.rs  hearing_segment.rs  hearing_statement.rs  individual_vote.rs  legislator.rs  nomination.rs  roll_call_vote.rs  segment.rs  source.rs  speaker.rs  speaker_alias.rs  speaker_type.rs  transcription.rs
politics-search/crates/polsearch-db/: Cargo.toml
politics-search/crates/polsearch-db/migrations/: 001_initial.sql  002_add_raw_data_version.sql  003_add_updated_at.sql  004_remove_cached_counts.sql  005_add_batch_priority.sql  006_rename_to_sources_and_content.sql  007_add_hearings.sql  008_add_floor_speeches.sql  009_add_votes.sql  010_increase_committee_slug.sql  011_increase_vote_type_length.sql  012_remove_hearing_text_columns.sql
politics-search/crates/polsearch-db/src/: error.rs  lib.rs  repos.rs
politics-search/crates/polsearch-db/src/repos/: amendment.rs  bill.rs  committee.rs  content.rs  content_speaker.rs  floor_speech.rs  floor_speech_segment.rs  floor_speech_statement.rs  hearing.rs  hearing_segment.rs  hearing_statement.rs  individual_vote.rs  legislator.rs  nomination.rs  roll_call_vote.rs  segment.rs  source.rs  speaker.rs  transcription_batch.rs  transcription_task.rs
politics-search/crates/polsearch-pipeline/: Cargo.toml
politics-search/crates/polsearch-pipeline/src/: config.rs  lib.rs  stages.rs
politics-search/crates/polsearch-pipeline/src/stages/: chunk.rs  crec_parser.rs  download.rs  embed.rs  ingest_floor_speeches.rs  ingest_fts.rs  ingest_hearings.rs  procedural_filter.rs
politics-search/crates/polsearch-util/: Cargo.toml
politics-search/crates/polsearch-util/src/: lib.rs
politics-search/crates/xtask/: Cargo.toml
politics-search/crates/xtask/src/: common.rs  main.rs  release.rs  swift.rs  version.rs
politics-search/docs/: embedding-speed-up-cloud.md
politics-search/docs/specs/: fts-ingestion.md
politics-search/docs/specs/completed/: cli-reorganization.md
politics-search/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
skill/: SKILL.md
skill/references/: api_reference.md
video-processing/: README.md  requirements.txt
video-processing/config/: settings.yaml
video-processing/data/: legislators.json
video-processing/scripts/: __init__.py  extract_transcripts.py  fetch_legislators.py  pipeline.py  search_internet_archive.py  search_youtube.py
(+14382 files in other folders)
