[package]
name = "congress-events"
version = "0.1.0"
edition = "2024"

[dependencies]
media-common = { path = "../media-common" }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
regex = "1"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
