[package]
name = "media-podcasts"
version = "0.1.0"
edition = "2024"

[dependencies]
media-common = { path = "../media-common" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
eyre = "0.6"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
