[package]
name = "polsearch-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true }
slug = { workspace = true }

[dev-dependencies]
test-case = "3"

[lints]
workspace = true
